last minute updates

--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -7,7 +7,7 @@
             <div class="card-body">
                 <h5 class="card-title"><label id="title1"></label></h5>
                 <p class="card-text">Nada que decir, de los mejores, si no el mejor manga de todos los tiempos.</p>
-                <button class="btn btn-primary" onclick="">Agregar al carro</button>
+                <button class="btn btn-primary" (click)="addedNotification()">Agregar al carro</button>
             </div>
             <div class="card-footer">
                 <small class="text-muted">En curso</small>
@@ -18,7 +18,7 @@
             <div class="card-body">
                 <h5 class="card-title"><label id="title2"></label></h5>
                 <p class="card-text">Nada que decir, de los mejores, si no el mejor manga de todos los tiempos.</p>
-                <button class="btn btn-primary" onclick="">Agregar al carro</button>
+                <button class="btn btn-primary" (click)="addedNotification()">Agregar al carro</button>
             </div>
             <div class="card-footer">
                 <small class="text-muted">En curso</small>
@@ -29,7 +29,7 @@
             <div class="card-body">
                 <h5 class="card-title"><label id="title3"></label></h5>
                 <p class="card-text">Nada que decir, de los mejores, si no el mejor manga de todos los tiempos.</p>
-                <button class="btn btn-primary" onclick="">Agregar al carro</button>
+                <button class="btn btn-primary" (click)="addedNotification()">Agregar al carro</button>
             </div>
             <div class="card-footer">
                 <small class="text-muted">En curso</small>
@@ -40,7 +40,7 @@
             <div class="card-body">
                 <h5 class="card-title"><label id="title4"></label></h5>
                 <p class="card-text">Nada que decir, de los mejores, si no el mejor manga de todos los tiempos.</p>
-                <button class="btn btn-primary" onclick="">Agregar al carro</button>
+                <button class="btn btn-primary" (click)="addedNotification()">Agregar al carro</button>
             </div>
             <div class="card-footer">
                 <small class="text-muted">En curso</small>
@@ -54,7 +54,7 @@
             <div class="card-body">
                 <h5 class="card-title"><label id="title5"></label></h5>
                 <p class="card-text">Nada que decir, de los mejores, si no el mejor manga de todos los tiempos.</p>
-                <button class="btn btn-primary" onclick="">Agregar al carro</button>
+                <button class="btn btn-primary" (click)="addedNotification()">Agregar al carro</button>
             </div>
             <div class="card-footer">
                 <small class="text-muted">En curso</small>
@@ -65,7 +65,7 @@
             <div class="card-body">
                 <h5 class="card-title"><label id="title6"></label></h5>
                 <p class="card-text">Nada que decir, de los mejores, si no el mejor manga de todos los tiempos.</p>
-                <button class="btn btn-primary" onclick="">Agregar al carro</button>
+                <button class="btn btn-primary" (click)="addedNotification()">Agregar al carro</button>
             </div>
             <div class="card-footer">
                 <small class="text-muted">En curso</small>
@@ -76,7 +76,7 @@
             <div class="card-body">
                 <h5 class="card-title"><label id="title7"></label></h5>
                 <p class="card-text">Nada que decir, de los mejores, si no el mejor manga de todos los tiempos.</p>
-                <button class="btn btn-primary" onclick="">Agregar al carro</button>
+                <button class="btn btn-primary" (click)="addedNotification()">Agregar al carro</button>
             </div>
             <div class="card-footer">
                 <small class="text-muted">En curso</small>
@@ -87,7 +87,7 @@
             <div class="card-body">
                 <h5 class="card-title"><label id="title8"></label></h5>
                 <p class="card-text">Nada que decir, de los mejores, si no el mejor manga de todos los tiempos.</p>
-                <button class="btn btn-primary" onclick="">Agregar al carro</button>
+                <button class="btn btn-primary" (click)="addedNotification()">Agregar al carro</button>
             </div>
             <div class="card-footer">
                 <small class="text-muted">En curso</small>
