--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -1,46 +1,47 @@
 <section class="vh-100 gradient-custom">
-    <div class="container py-5 h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-          <div class="card bg-dark text-white" style="border-radius: 1rem;">
-            <div class="card-body p-5 text-center">
-  
-              <div class="mb-md-5 mt-md-4 pb-5">
-  
-                <h2 class="fw-bold mb-2 text-uppercase">Inicio de sesion</h2>
-                <p class="text-white-50 mb-5">Ingresa tus credenciales</p>
-  
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card bg-dark text-white" style="border-radius: 1rem;">
+          <div class="card-body p-5 text-center">
 
-                <form action="" method="POST" id="form">
+            <div class="mb-md-5 mt-md-4 pb-5">
+
+              <h2 class="fw-bold mb-2 text-uppercase">Inicio de sesion</h2>
+              <p class="text-white-50 mb-5">Ingresa tus credenciales</p>
 
 
-                  <div data-mdb-input-init class="form-outline form-white mb-4">
-                    <input type="email" id="email" class="form-control form-control-lg" />
-                    <label class="form-label" for="">Email</label>
-                  </div>
-    
-                  <div data-mdb-input-init class="form-outline form-white mb-4">
-                    <input type="password" id="password" class="form-control form-control-lg" />
-                    <label class="form-label" for="">Contraseña</label>
-                  </div>
-    
-                  <button class="btn btn-outline-light btn-lg px-5" type="submit">Iniciar sesion</button>
-                  
-                  <p class="warnings text-center" id="warnings"></p>
+              <form action="" method="POST" id="form">
 
-                </form>
 
-                
-              </div>
-  
-              <div>
-                <p class="mb-0">No estas registrado? <a routerLink="/register" class="text-white-50 fw-bold">Registrate aqui</a>
-                </p>
-              </div>
-  
+                <div data-mdb-input-init class="form-outline form-white mb-4">
+                  <input type="email" id="email" class="form-control form-control-lg" />
+                  <label class="form-label" for="">Email</label>
+                </div>
+
+                <div data-mdb-input-init class="form-outline form-white mb-4">
+                  <input type="password" id="password" class="form-control form-control-lg" />
+                  <label class="form-label" for="">Contraseña</label>
+                </div>
+
+                <button class="btn btn-outline-light btn-lg px-5" (click)="iniciarSesion()">Iniciar sesion</button>
+
+                <p class="warnings text-center" id="warnings"></p>
+
+              </form>
+
+
             </div>
+
+            <div>
+              <p class="mb-0">No estas registrado? <a routerLink="/register" class="text-white-50 fw-bold">Registrate
+                  aqui</a>
+              </p>
+            </div>
+
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
